@@ -7,6 +7,7 @@
 - Add --id-prefix option to clients to allow easier use with brokers that are
   using the clientid_prefix option.
 - Fix compilation on QNX.
+- Add -P as a synonym argument for --pw in the clients.
 
 0.11.3 - 20110707
 =================
